<resources>
    <string name="app_name">Corporate Mail</string>
    <string name="app_version">1.2.5</string>
    <string name="noSubjectDisplay">(no subject)</string>
    <string name="unknownError">Unknown Error</string>
    <string name="api_version_low">You are using an older version of Android</string>
    <string name="login_logo_bigText">Corporate Mail</string>
    <string name="title_activity_main">Corp. Mail</string>
    <string name="login_logo_bigText_beta"></string>
    <string name="webmail_365_url">https://outlook.office365.com</string>
    <string name="webmail_url_EWS_extension">/EWS/Exchange.asmx</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login_page">Login</string>
    <string name="login_url">Mail Server Url</string>
    <string name="login_url_text">https://</string>
    <string name="login_user_text">ADS Id or Email Id</string>
    <string name="login_pwd_text">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="alertdialog_save_lbl">Save</string>
    <string name="alertdialog_positive_lbl">OK</string>
    <string name="alertdialog_negative_lbl">Cancel</string>
    <string name="settings_sign_in_text">Signed In As :</string>
    <string name="settings_sign_in_default"></string>
    <string name="setting_sign_out_btn">Sign Out/Reset</string>
    <string name="setting_sign_in_btn">Sign In</string>
    <string name="main_activity_loading_text">Loading..</string>
    <string name="mailListView_today">Today</string>
    <string name="mailListView_yesterday">Yesterday</string>
    <string name="mailListView_same_month">This Month</string>
    <string name="mailListView_1_year">Last Year</string>
    <string name="mailListView_x_years">%s Years</string>
    <string name="new_mail_1">1 New Mail</string>
    <string name="new_mail_x">%d New Mails</string>
    <string name="unread_item_1">1 Unread Item</string>
    <string name="unread_item_x">%d Unread Items</string>
    <string name="no_new_mail">No New Mail</string>
    <string name="no_mail">No Mail</string>
    <string name="folder_updater_checking">Checking for new mail</string>
    <string name="folder_updater_success">Done</string>
    <string name="folder_updater_error">Update failed</string>
    <string name="folder_auth_error">Authentication failed</string>
    <string name="folder_checking_almostDone">Almost Done</string>
    <string name="folder_updater_updating">Updating %s</string>
    <string name="pullToRefresh_checking_big">Loading..</string>
    <string name="pullToRefresh_checking_small">Checking for mails</string>
    <string name="mailListView_moreloading">Getting mails...</string>
    <string name="mailListView_moreloading_next_x">Loading %s more...</string>
    <string name="mailListView_moreloading_remaining">%s remaining</string>
    <string name="mnsServiceNewMailNotification">You have %d new email</string>
    <string name="mnsServiceNotificationWithNullMessage">New Email</string>
    <string name="mns_service_started">Starting Corporate Mail Notification Service..</string>
    <string name="mns_service_stopped">Corporate Mail Notification Service Stopped</string>
    <string name="mns_service_invalidUser_title">Error: Invalid UserName/Password</string>
    <string name="mns_service_invalidUser_message">Have you recently changed your AD Username/Password? Please login to the application with your new Username/Password.</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_please_like_my_fb_beg_you">Like our Facebook page for latest app updates.</string>
    <string name="title_activity_Apk_download_Url">Latest Apk can be downloaded from, \n https://bit.ly/corporatemail</string>
    <string name="title_activity_url">Like our Facebook page for latest app updates. \nApk Manual Download URL \n https://bit.ly/corporatemail</string>
    <string name="about_activity_update_btn">Check for Updates</string>
    <string name="about_activity_bugOrSuggestion_btn">Bugs/Suggestion</string>
    <string name="about_activity_rate_app_btn">Rate this app</string>
    <string name="about_activity_close_btn">Close</string>
    <string name="playstore_not_available">Google PlayStore or similar app is not available</string>
    <string name="app_updater_error">Cannot check for app updates at this time</string>
    <string name="app_updater_complete">Updated Successfully</string>
    <string name="app_updater_noupdates">You have the latest version</string>
    <string name="app_updater_installing">Installing..</string>
    <string name="app_updater_checking">Checking for Updates..</string>
    <string name="auto_update_check_dismiss_dialog">You can check for updates later using the \"Check For Updates\" button in About section</string>
    <string name="auto_update_check_new_update_title">Update Available</string>
    <string name="auto_update_check_new_update_msg">New version update is available</string>
    <string name="auto_update_check_new_update_pos_button">Continue</string>
    <string name="auto_update_check_new_update_neg_button">Dismiss</string>
    <string name="no_internet_connection_error_text">Connection problem</string>
    <string name="contetn_desc_logo">Corporate Email Logo</string>
    <string name="viewmail_from_lbl">From:</string>
    <string name="viewmail_to_lbl">To:</string>
    <string name="viewmail_cc_lbl">CC:</string>
    <string name="viewmail_date_lbl">Date:</string>
    <string name="viewmail_downloading_imgs">Downloading %1$d of %2$d image(s)</string>
    <string name="viewmail_downloading_img">Downloading %1$d of %2$d image(s)</string>
    <string name="viewmail_mail_deleted">Message Deleted</string>
    <string name="contact_details_deptLbl">Department</string>
    <string name="contact_details_emailLbl">Email</string>
    <string name="contact_details_workPhoneLbl">Work Phone</string>
    <string name="contact_details_mobilePhoneLbl">Mobile Phone</string>
    <string name="contact_details_faxLbl">Fax</string>
    <string name="contact_details_officeLocLbl">Office Location</string>
    <string name="compose_subject_lbl">Subject</string>
    <string name="compose_to_disp_default">To: </string>
    <string name="compose_cc_disp_default">CC: </string>
    <string name="compose_bcc_disp_default">BCC: </string>
    <string name="compose_to_lbl">To</string>
    <string name="compose_to_addRecipientBtn">Add</string>
    <string name="compose_to_no_recep">Please add atleast one recipient</string>
    <string name="compose_resolving_names_wait">Please wait while resolving names</string>
    <string name="compose_to_box_not_empty">Please click the Add symbol to add the To recipient</string>
    <string name="compose_body_lbl">Message</string>
    <string name="compose_signature_lbl">Signature (common for all emails)</string>
    <string name="compose_quoted_text_lbl">Quoted Text:</string>
    <string name="compose_send_btn_lbl">Send</string>
    <string name="compose_sending">Sending.. </string>
    <string name="compose_msg_sent">Message Sent</string>
    <string name="compose_msg_send_failed">Message Sending Failed</string>
    <string name="compose_signature_default"></string>
    <string name="compose_resoleNameDialog_to_title">To:</string>
    <string name="compose_resoleNameDialog_progress">Please wait..</string>
    <string name="compose_resoleNameDialog_error">Unknown Error Occurred</string>
    <string name="compose_resoleNameDialog_nomatch">No match found</string>
    <string name="compose_actionbar_send">Send</string>
    <string name="compose_actionbar_attach">Attach</string>
    <string name="compose_actionbar_save_draft">Save Draft</string>
    <string name="compose_actionbar_cancel">Discard</string>
    <string name="compose_emptyString">(empty)</string>
    <string name="compose_reply_subject_prefix">RE:</string>
    <string name="compose_forward_subject_prefix">FW:</string>
    <string name="compose_resolve_names_not_found">%s email id not found</string>
    <string name="compose_alert_confirm_send">Confirm send?</string>
    <string name="compose_alert_confirm_nobody_send">No message body. Send anyway?</string>
    <string name="compose_alert_confirm_nosub_send">No subject. Send anyway?</string>
    <string name="compose_alert_confirm_nobody_nosub_send">No subject and message body. Send anyway?</string>
    <string name="compose_alert_confirm_title">Send</string>
    <string name="compose_alert_confirm_cancel_title">Cancel</string>
    <string name="compose_alert_confirm_cancel_msg">Error saving draft. Exit?</string>
    <string name="compose_alert_confirm_cancel_saving">Save in progress. Exit?</string>
    <string name="compose_unknown_attachment_size">Unknown</string>
    <string name="compose_attachment_error">Could not attach file(s)</string>
    <string name="compose_save_draft_success">Message saved as Draft</string>
    <string name="compose_saving_draft">Saving Draft</string>
    <string name="compose_statusbar_save_success">Draft saved successfully</string>
    <string name="compose_statusbar_save_failure">Couldn\'t save draft</string>
    <string name="compose_resolving_names_text">Validating email id</string>
    <string name="compose_resolve_notfound_warning">The email id for the following contact(s) are not resolved. Please enter the email id manually.\n%s</string>
    <string name="addrecipient_searchdirectory_btn_lbl">Search</string>
    <string name="addrecipient_addTo_btn_lbl">To</string>
    <string name="addrecipient_addCC_btn_lbl">CC</string>
    <string name="addrecipient_addBCC_btn_lbl">BCC</string>
    <string name="addrecipient_contactSearch_hint">Enter Email Id or Search</string>
    <string name="addrecipient_contactSearch_helptext">Enter email id or search and then tap To, CC or BCC</string>
    <string name="addrecipient_error">Unknown Error Occurred</string>
    <string name="addrecipient_nomatch">No match found</string>
    <string name="addrecipient_select_person">Please enter valid email id or search person</string>
    <string name="preference_serverurl_title">Exchange Server</string>
    <string name="preference_general_title">General</string>
    <string name="prefernce_serverurl_message">Connects to %s</string>
    <string name="preference_title_notification">Notification</string>
    <string name="preference_notification_enable_title">Notifications</string>
    <string name="preferences_notification_type_dialog_title">Notification Type</string>
    <string name="notification_pull_frequency">Pull Frequency</string>
    <string name="preferences_notification_type_title">Subscription Type</string>
    <string name="preference_notification_enable_ON_summary">Notifies about new email</string>
    <string name="preference_notification_advanced_title">Advanced</string>
    <string name="preference_notification_advanced_summary">Notification sound, vibration, etc.,</string>
    <string name="preferences_compose_title">Compose</string>
    <string name="preferences_compose_signature_enable_title">Signature</string>
    <string name="preferences_webmail_server">Mail Server</string>
    <string name="preferences_account_title">Account Settings</string>
    <string name="preferences_change_password_title">Change Password</string>
    <string name="preferences_change_password_summary">Changes the password which is stored locally</string>
    <string name="preferences_signout_title">Reset/Sign Out</string>
    <string name="preferences_signout_summary">Clears all the data and logs out</string>
    <string name="preferences_clear_cache">Clear Cache</string>
    <string name="preferences_clear_cache_summary">Clears all the mail offline data stored in phone</string>
    <string name="actionMode_deleteMail">Delete</string>
    <string name="actionMode_mark_unreadMail">Mark Unread</string>
    <string name="actionMode_mark_readMail">Mark Read</string>
</resources>