<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- General -->
    <PreferenceCategory android:title="@string/preference_general_title" >
        <EditTextPreference
            android:defaultValue="true"
            android:key="webmail_server"
            android:title="@string/preferences_webmail_server"
            android:inputType="textUri"/>

    </PreferenceCategory>

    <!-- Compose -->
    <PreferenceCategory android:title="@string/preferences_compose_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="compose_signature_enable"
            android:title="@string/preferences_compose_signature_enable_title" />
    </PreferenceCategory>

    <!-- Notifications -->
    <PreferenceCategory android:title="@string/preference_title_notification" >

        <!-- Notification Enable -->
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_enable"
            android:summary="@string/preference_notification_enable_ON_summary"
            android:title="@string/preference_notification_enable_title" />

        <!-- Notification Type -->
        <ListPreference
            android:defaultValue="pull"
            android:dependency="notification_enable"
            android:dialogTitle="@string/preferences_notification_type_dialog_title"
            android:entries="@array/preferences_notification_type_text"
            android:entryValues="@array/preferences_notification_type_values"
            android:key="notification_type"
            android:title="@string/preferences_notification_type_title" />

        <!-- Pull Frequency - Not visible-->
        <ListPreference
            android:defaultValue="900000"
            android:dependency="notification_enable"
            android:entries="@array/preferences_pull_notification_frequency_text"
            android:entryValues="@array/preferences_pull_notification_frequency_values"
            android:key="notification_pull_frequency"
            android:title="@string/notification_pull_frequency" />

        <!-- Notification - advanced settings -->
        <Preference
            android:key="notification_advanced"
            android:title="@string/preference_notification_advanced_title"
            android:summary="@string/preference_notification_advanced_summary"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_account_title" >
        <Preference
            android:key="change_password"
            android:summary="@string/preferences_change_password_summary"
            android:title="@string/preferences_change_password_title" />
        <Preference
            android:key="clear_cache"
            android:summary="@string/preferences_clear_cache_summary"
            android:title="@string/preferences_clear_cache" />
         <Preference
            android:key="sign_out"
            android:summary="@string/preferences_signout_summary"
            android:title="@string/preferences_signout_title" />
    </PreferenceCategory>

</PreferenceScreen>