<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- layout to show image downloading progress -->
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <!-- Logo Section -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="90dip"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/contetn_desc_logo"
                    android:src="@drawable/cm_hi_res_icon" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/imageView1"
                    android:text="@string/login_logo_bigText"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/textView3"
                    android:text="@string/login_logo_bigText_beta"
                    android:textSize="10dp" />
            </RelativeLayout>

            <!-- Main Content -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="60dp"
                android:paddingRight="20dp">

                <!-- Password -->
                <EditText
                    android:id="@+id/login_url"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17sp"
                    android:ems="10"
                    android:hint="@string/login_url"
                    android:inputType="textUri"
                    android:text="@string/login_url_text" />

                <!-- UserName edittext -->
                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_user_text"
                    android:inputType="textNoSuggestions" />

                <!-- Password -->
                <EditText
                    android:id="@+id/login_passwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_pwd_text"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/loginBtn"
                    style="@style/Style.Button"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="40sp"
                    android:onClick="loginButtonClicked"
                    android:text="@string/login_btn_text" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>