<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- layout to show image downloading progress -->
    <include layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_recipient_contraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRecipientActivity">

        <EditText
            android:id="@+id/contactSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/addrecipient_contactSearch_hint"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchHelpText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/addrecipient_contactSearch_helptext"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/contactSearch" />

        <Button
            android:id="@+id/searchDirectoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:onClick="onClickDirectorySearch"
            android:text="@string/addrecipient_searchdirectory_btn_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchHelpText" />


        <ListView
            android:id="@+id/suggestionsListView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/addTo"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/searchDirectoryBtn" />

        <Button
            android:id="@+id/addCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addCCOnClick"
            android:text="@string/addrecipient_addCC_btn_lbl"
            app:layout_constraintBottom_toTopOf="@+id/botton_guideline"
            app:layout_constraintEnd_toStartOf="@+id/addBCC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addTo" />

        <Button
            android:id="@+id/addTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addToOnClick"
            android:text="@string/addrecipient_addTo_btn_lbl"
            app:layout_constraintBottom_toTopOf="@+id/botton_guideline"
            app:layout_constraintEnd_toStartOf="@+id/addCC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addBCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addBCCOnClick"
            android:text="@string/addrecipient_addBCC_btn_lbl"
            app:layout_constraintBottom_toTopOf="@+id/botton_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addCC" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"
            app:layout_constraintStart_toEndOf="@+id/addBCC" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/botton_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>