<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="2dp" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/about_activity_appname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:text="@string/app_name" />

                    <TextView
                        android:id="@+id/about_activity_appname_ver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:textSize="10dip" />
                </LinearLayout>
            </LinearLayout>

            <!-- Update button -->
            <!--
            <Button
                android:id="@+id/about_activity_rate_app_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginTop="45dp"
                android:onDrawerLayoutRecyclerViewClick="onClickRateApp"
                android:text="@string/about_activity_rate_app_btn" />

            <Button
                android:id="@+id/about_activity_close_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/about_activity_rate_app_btn"
                android:layout_alignBottom="@+id/about_activity_rate_app_btn"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/about_activity_rate_app_btn"
                android:onDrawerLayoutRecyclerViewClick="onClose"
                android:text="@string/about_activity_close_btn" />
            <FrameLayout android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/about_activity_rate_app_btn"
            ></FrameLayout>
            -->


            <!--
               <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/about_activity_check_update_btn"
               android:layout_marginTop="10dp"
                android:visibility="visible" >
            -->


            <!-- remove android:layout_marginBottom when removing ads for this page -->


            <!--
                     <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                     >
            -->


            <!-- </LinearLayout> -->
            <!-- </ScrollView> -->
            <!--
            <include
                android:id="@+id/ads"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                layout="@layout/ads" />
            -->

            <ImageButton
                android:id="@+id/fbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="2dp"
                android:src="@drawable/fb_like" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/title_activity_please_like_my_fb_beg_you"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginTop="32dp"
                android:autoLink="web"
                android:textSize="12sp" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
